Added Dockerfile, prepared build, modified main for hosting image